not showing undefined visualizations in dashboards and fixing visualization canvas height

--- a/client/views/visualization/visualization.css
+++ b/client/views/visualization/visualization.css
@@ -5,5 +5,5 @@
 }
 
 .visualizationCanvas {
-  height: 85%;
+  overflow: auto;
 }
